// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccordionMenuItem > should not render hidden sub list items 1`] = `
<DocumentFragment>
  <div
    class="sc-jSMdHm gRtYZt"
    data-rc="AccordionMenu"
  >
    <button
      class="sc-gsnScm eGwlpA"
      data-state="open"
    >
      <div
        class="sc-jSMdHm FxIeT"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bczSft cMucIl sc-hKMtDE kFnGoN"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg
            height="7"
            viewBox="0 0 12 7"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
              fill="#F9C000"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSMdHm eQuTnj"
    />
    <ul
      class="sc-dkzCjb fhmfsU"
    >
      <li
        class="sc-eCYdKt fhdMkn"
        data-rc="AccordionMenuItem"
      >
        <a
          class="sc-gKXNOb jSssGy"
          data-rc="Link"
          href="/"
          target="_self"
        >
          <div
            class="sc-jSMdHm fOjiZJ"
          >
            Visible Item
          </div>
        </a>
      </li>
      <li
        class="sc-eCYdKt fhdMkn"
        data-rc="AccordionMenuItem"
      >
        <button
          class="sc-gsnScm eGwlpA"
          data-state="closed"
        >
          SubList Item
          <span
            aria-hidden="true"
            class="sc-bczSft cMucIl sc-hKMtDE kFnGoN"
            data-rc="LargeSystemIcon.ChevronYellow"
          >
            <svg
              height="7"
              viewBox="0 0 12 7"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
                fill="#F9C000"
                fill-rule="nonzero"
              />
            </svg>
          </span>
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`AccordionMenuItem > should not render if hidden 1`] = `
<DocumentFragment>
  <div
    class="sc-jSMdHm gRtYZt"
    data-rc="AccordionMenu"
  >
    <button
      class="sc-gsnScm eGwlpA"
      data-state="closed"
    >
      <div
        class="sc-jSMdHm FxIeT"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bczSft cMucIl sc-hKMtDE kFnGoN"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg
            height="7"
            viewBox="0 0 12 7"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
              fill="#F9C000"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSMdHm eQuTnj"
    />
  </div>
</DocumentFragment>
`;

exports[`AccordionMenuItem > should render correctly with list 1`] = `
<DocumentFragment>
  <div
    class="sc-jSMdHm gRtYZt"
    data-rc="AccordionMenu"
  >
    <button
      class="sc-gsnScm eGwlpA"
      data-state="closed"
    >
      <div
        class="sc-jSMdHm FxIeT"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bczSft cMucIl sc-hKMtDE kFnGoN"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg
            height="7"
            viewBox="0 0 12 7"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
              fill="#F9C000"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSMdHm eQuTnj"
    />
  </div>
</DocumentFragment>
`;

exports[`AccordionMenuItem > should render with data attributes 1`] = `
<DocumentFragment>
  <div
    class="sc-jSMdHm gRtYZt"
    data-rc="AccordionMenu"
    data-test="test-attribute"
  >
    <button
      class="sc-gsnScm eGwlpA"
      data-state="closed"
    >
      <div
        class="sc-jSMdHm FxIeT"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bczSft cMucIl sc-hKMtDE kFnGoN"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg
            height="7"
            viewBox="0 0 12 7"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
              fill="#F9C000"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSMdHm eQuTnj"
    />
  </div>
</DocumentFragment>
`;

exports[`AccordionMenuItem > should toggle the list on click 1`] = `
<DocumentFragment>
  <div
    class="sc-jSMdHm gRtYZt"
    data-rc="AccordionMenu"
  >
    <button
      class="sc-gsnScm eGwlpA"
      data-state="closed"
    >
      <div
        class="sc-jSMdHm FxIeT"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bczSft cMucIl sc-hKMtDE kFnGoN"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg
            height="7"
            viewBox="0 0 12 7"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
              fill="#F9C000"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSMdHm eQuTnj"
    />
  </div>
</DocumentFragment>
`;

exports[`AccordionMenuItem should not render hidden sub list items 1`] = `
<DocumentFragment>
  <div
    class="sc-jSUZER cGzYVp"
    data-rc="AccordionMenu"
  >
    <button
      class="sc-gswNZR dmdjWu"
      data-state="open"
    >
      <div
        class="sc-jSUZER ljdiQH"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bcXHqe lmcdLK sc-hLBbgP cqdzXG"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg>
            chevron-yellow.svg
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSUZER fuBeJn"
    />
    <ul
      class="sc-dkrFOg fXYAxm"
    >
      <li
        class="sc-eDvSVe Jedgj"
        data-rc="AccordionMenuItem"
      >
        <a
          class="sc-gKPRtg hDcrGb"
          data-rc="Link"
          href="/"
          target="_self"
        >
          <div
            class="sc-jSUZER iKLYLh"
          >
            Visible Item
          </div>
        </a>
      </li>
      <li
        class="sc-eDvSVe Jedgj"
        data-rc="AccordionMenuItem"
      >
        <button
          class="sc-gswNZR dmdjWu"
          data-state="closed"
        >
          SubList Item
          <span
            aria-hidden="true"
            class="sc-bcXHqe lmcdLK sc-hLBbgP cqdzXG"
            data-rc="LargeSystemIcon.ChevronYellow"
          >
            <svg>
              chevron-yellow.svg
            </svg>
          </span>
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`AccordionMenuItem should not render if hidden 1`] = `
<DocumentFragment>
  <div
    class="sc-jSUZER cGzYVp"
    data-rc="AccordionMenu"
  >
    <button
      class="sc-gswNZR dmdjWu"
      data-state="closed"
    >
      <div
        class="sc-jSUZER ljdiQH"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bcXHqe lmcdLK sc-hLBbgP cqdzXG"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg>
            chevron-yellow.svg
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSUZER fuBeJn"
    />
  </div>
</DocumentFragment>
`;

exports[`AccordionMenuItem should render correctly with list 1`] = `
<DocumentFragment>
  <div
    class="sc-jSUZER cGzYVp"
    data-rc="AccordionMenu"
  >
    <button
      class="sc-gswNZR dmdjWu"
      data-state="closed"
    >
      <div
        class="sc-jSUZER ljdiQH"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bcXHqe lmcdLK sc-hLBbgP cqdzXG"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg>
            chevron-yellow.svg
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSUZER fuBeJn"
    />
  </div>
</DocumentFragment>
`;

exports[`AccordionMenuItem should render with data attributes 1`] = `
<DocumentFragment>
  <div
    class="sc-jSUZER cGzYVp"
    data-rc="AccordionMenu"
    data-test="test-attribute"
  >
    <button
      class="sc-gswNZR dmdjWu"
      data-state="closed"
    >
      <div
        class="sc-jSUZER ljdiQH"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bcXHqe lmcdLK sc-hLBbgP cqdzXG"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg>
            chevron-yellow.svg
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSUZER fuBeJn"
    />
  </div>
</DocumentFragment>
`;

exports[`AccordionMenuItem should toggle the list on click 1`] = `
<DocumentFragment>
  <div
    class="sc-jSUZER cGzYVp"
    data-rc="AccordionMenu"
  >
    <button
      class="sc-gswNZR dmdjWu"
      data-state="closed"
    >
      <div
        class="sc-jSUZER ljdiQH"
      >
        Menu
        <span
          aria-hidden="true"
          class="sc-bcXHqe lmcdLK sc-hLBbgP cqdzXG"
          data-rc="LargeSystemIcon.ChevronYellow"
        >
          <svg>
            chevron-yellow.svg
          </svg>
        </span>
      </div>
    </button>
    <div
      class="sc-jSUZER fuBeJn"
    />
  </div>
</DocumentFragment>
`;
